termino cap 6 (antes 5)

--- a/doc/latex/ConcMonoid-ConcMonad.tex
+++ b/doc/latex/ConcMonoid-ConcMonad.tex
@@ -14,8 +14,10 @@
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Structures.ConcurrentMonad}\AgdaSpace{}%
-\AgdaKeyword{hiding}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{unit}\AgdaSymbol{)}\<%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaRecord{ConcurrentMonad}\AgdaSpace{}%
+\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{makeConcurrentMonad}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -42,6 +44,10 @@
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Product}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Unit}\<%
 \end{code}
 
 %<*funtor>
@@ -83,35 +89,27 @@
 \>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{ConcurrentMonoid}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{cmonoid}\AgdaSpace{}%
-\AgdaKeyword{renaming}\<%
+\AgdaBound{cmonoid}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{(}\AgdaUnderscore{}≅ₘ\AgdaUnderscore{} \AgdaSymbol{to} \AgdaUnderscore{}≅\AgdaUnderscore{}       \AgdaSymbol{;} \AgdaUnderscore{}≲ₘ\AgdaUnderscore{} \AgdaSymbol{to} \AgdaUnderscore{}≲\AgdaUnderscore{}       \AgdaSymbol{;}
+\>[4]\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaUnderscore{}≅ₘ\AgdaUnderscore{} \AgdaSymbol{to} \AgdaUnderscore{}≅\AgdaUnderscore{} \AgdaSymbol{;} \AgdaUnderscore{}≲ₘ\AgdaUnderscore{} \AgdaSymbol{to} \AgdaUnderscore{}≲\AgdaUnderscore{} \AgdaSymbol{;} zeroₘ \AgdaSymbol{to} zero \AgdaSymbol{;} \AgdaUnderscore{}+ₘ\AgdaUnderscore{} \AgdaSymbol{to} \AgdaUnderscore{}+\AgdaUnderscore{}\AgdaSymbol{)}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] zeroₘ \AgdaSymbol{to} zero      \AgdaSymbol{;} \AgdaUnderscore{}+ₘ\AgdaUnderscore{} \AgdaSymbol{to} \AgdaUnderscore{}+\AgdaUnderscore{}        \AgdaSymbol{;} 
+%
+\>[4]\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}eqₘ \AgdaSymbol{to} eq \AgdaSymbol{;} sidl \AgdaSymbol{to} +idl \AgdaSymbol{;} sidr \AgdaSymbol{to} +idr \AgdaSymbol{;} sassoc \AgdaSymbol{to} +assoc\AgdaSymbol{)}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] eqₘ \AgdaSymbol{to} eq          \AgdaSymbol{;} sidl \AgdaSymbol{to} +idl       \AgdaSymbol{;} 
+%
+\>[4]\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}maxₘ \AgdaSymbol{to} max \AgdaSymbol{;} porderₘ \AgdaSymbol{to} porder \AgdaSymbol{;} midr \AgdaSymbol{to} maxidr \AgdaSymbol{;} midl \AgdaSymbol{to} maxidl\AgdaSymbol{)}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] sidr \AgdaSymbol{to} +idr       \AgdaSymbol{;} sassoc \AgdaSymbol{to} +assoc   \AgdaSymbol{;}
+%
+\>[4]\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}scomp≲ₘ \AgdaSymbol{to} scomp≲ \AgdaSymbol{;} mcomp≲ₘ \AgdaSymbol{to} mcomp≲ \AgdaSymbol{;} mcomm \AgdaSymbol{to} maxcomm\AgdaSymbol{)}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] maxₘ \AgdaSymbol{to} max        \AgdaSymbol{;} porderₘ \AgdaSymbol{to} porder  \AgdaSymbol{;}
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] midr \AgdaSymbol{to} maxidr     \AgdaSymbol{;} midl \AgdaSymbol{to} maxidl     \AgdaSymbol{;}
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] scomp≲ₘ \AgdaSymbol{to} scomp≲  \AgdaSymbol{;} mcomp≲ₘ \AgdaSymbol{to} mcomp≲  \AgdaSymbol{;}
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] mcomm \AgdaSymbol{to} maxcomm   \AgdaSymbol{;} massoc \AgdaSymbol{to} maxassoc \AgdaSymbol{;} 
-\\	
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4] ichange \AgdaSymbol{to} interchange\AgdaSymbol{)}\<%
+%
+\>[4]\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}massoc \AgdaSymbol{to} maxassoc \AgdaSymbol{;} ichange \AgdaSymbol{to} interchange\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -120,9 +118,7 @@
 \AgdaModule{IsEquivalence}\AgdaSpace{}%
 \AgdaField{eq}\AgdaSpace{}%
 \AgdaKeyword{renaming}\AgdaSpace{}%
-\AgdaSymbol{(}refl \AgdaSymbol{to} reflₛ   \AgdaSymbol{;} 
-                                  trans \AgdaSymbol{to} transₛ \AgdaSymbol{;} 
-                                  sym \AgdaSymbol{to} symₛ\AgdaSymbol{)}\<%
+\AgdaSymbol{(}refl \AgdaSymbol{to} reflₛ \AgdaSymbol{;} trans \AgdaSymbol{to} transₛ \AgdaSymbol{;} sym \AgdaSymbol{to} symₛ\AgdaSymbol{)}\<%
 \\
 \>[0]\<%
 \\
@@ -131,8 +127,7 @@
 \AgdaModule{IsPartialOrder}\AgdaSpace{}%
 \AgdaField{porder}\AgdaSpace{}%
 \AgdaKeyword{renaming}\AgdaSpace{}%
-\AgdaSymbol{(}isPreorder \AgdaSymbol{to} preorderₛ \AgdaSymbol{;} 
-                                       antisym \AgdaSymbol{to} antisymₛ\AgdaSymbol{)}\<%
+\AgdaSymbol{(}isPreorder \AgdaSymbol{to} preorderₛ \AgdaSymbol{;} antisym \AgdaSymbol{to} antisymₛ\AgdaSymbol{)}\<%
 \\
 \>[0]\<%
 \\
@@ -141,8 +136,7 @@
 \AgdaModule{IsPreorder}\AgdaSpace{}%
 \AgdaFunction{preorderₛ}\AgdaSpace{}%
 \AgdaKeyword{renaming}\AgdaSpace{}%
-\AgdaSymbol{(}reflexive \AgdaSymbol{to} ≤reflₛ \AgdaSymbol{;} 
-                                      trans \AgdaSymbol{to} ≤transₛ\AgdaSymbol{)}\<%
+\AgdaSymbol{(}reflexive \AgdaSymbol{to} ≤reflₛ \AgdaSymbol{;} trans \AgdaSymbol{to} ≤transₛ\AgdaSymbol{)}\<%
 \end{code}
 %</module> 
 
@@ -198,16 +192,16 @@
 %
 \>[2]\AgdaFunction{eqF≈}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[100I]\AgdaKeyword{record}\AgdaSpace{}%
+\>[108I]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaSymbol{\{}%
-\>[102I]\AgdaField{refl}\AgdaSpace{}%
+\>[110I]\AgdaField{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{reflₛ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{prefl}\AgdaSpace{}%
 \AgdaSymbol{;}\<%
 \\
-\>[.][@{}l@{}]\<[102I]%
+\>[.][@{}l@{}]\<[110I]%
 \>[18]\AgdaField{sym}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
@@ -225,14 +219,16 @@
 %
 \>[18]\AgdaField{trans}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{λ}\AgdaSpace{}%
-\AgdaSymbol{\{(}\AgdaBound{n≅m}\AgdaSpace{}%
+\AgdaSymbol{λ}%
+\>[130I]\AgdaSymbol{\{(}\AgdaBound{n≅m}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a≡b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{m≅o}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{b≡c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{b≡c}\AgdaSymbol{)}\<%
+\\
+\>[130I][@{}l@{\AgdaIndent{0}}]%
+\>[29]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{transₛ}\AgdaSpace{}%
 \AgdaBound{n≅m}\AgdaSpace{}%
 \AgdaBound{m≅o}\AgdaSpace{}%
@@ -241,7 +237,7 @@
 \AgdaBound{a≡b}\AgdaSpace{}%
 \AgdaBound{b≡c}\AgdaSymbol{\}}\<%
 \\
-\>[.][@{}l@{}]\<[100I]%
+\>[.][@{}l@{}]\<[108I]%
 \>[9]\AgdaSymbol{\}}\<%
 \end{code}
 %</eq>
@@ -300,21 +296,21 @@
 %
 \>[2]\AgdaFunction{porderF≤}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[175I]\AgdaKeyword{record}\<%
+\>[182I]\AgdaKeyword{record}\<%
 \\
-\>[.][@{}l@{}]\<[175I]%
+\>[.][@{}l@{}]\<[182I]%
 \>[13]\AgdaSymbol{\{}%
-\>[176I]\AgdaField{isPreorder}\AgdaSpace{}%
+\>[183I]\AgdaField{isPreorder}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[176I]%
+\>[.][@{}l@{}]\<[183I]%
 \>[15]\AgdaKeyword{record}%
-\>[178I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[185I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{isEquivalence}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{eqF≈}\<%
 \\
-\>[.][@{}l@{}]\<[178I]%
+\>[.][@{}l@{}]\<[185I]%
 \>[22]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{reflexive}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -333,14 +329,14 @@
 \AgdaField{trans}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{λ}%
-\>[196I]\AgdaSymbol{\{(}\AgdaBound{n≤m}\AgdaSpace{}%
+\>[203I]\AgdaSymbol{\{(}\AgdaBound{n≤m}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a≡b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{m≤o}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b≡c}\AgdaSymbol{)}\<%
 \\
-\>[196I][@{}l@{\AgdaIndent{0}}]%
+\>[203I][@{}l@{\AgdaIndent{0}}]%
 \>[38]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{≤transₛ}\AgdaSpace{}%
 \AgdaBound{n≤m}\AgdaSpace{}%
@@ -377,7 +373,7 @@
 %<*monad>
 \begin{code}%
 %
-\>[2]\AgdaFunction{η}\AgdaSpace{}%
+\>[2]\AgdaFunction{return}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
@@ -391,7 +387,7 @@
 \AgdaBound{A}\<%
 \\
 %
-\>[2]\AgdaFunction{η}\AgdaSpace{}%
+\>[2]\AgdaFunction{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{zero}\AgdaSpace{}%
@@ -401,7 +397,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{ext}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
@@ -424,7 +420,7 @@
 \AgdaBound{B}\<%
 \\
 %
-\>[2]\AgdaFunction{ext}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -435,7 +431,7 @@
 \\
 %
 \>[2]\AgdaSymbol{...}%
-\>[19]\AgdaSymbol{|}\AgdaSpace{}%
+\>[18]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaBound{m}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
@@ -451,16 +447,16 @@
 %<*bindcomp>
 \begin{code}%
 %
-\>[2]\AgdaFunction{ext-comp}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-comp}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[278I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[285I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x₁}\AgdaSpace{}%
+\AgdaBound{x₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{F}\AgdaSpace{}%
 \AgdaBound{S}\AgdaSpace{}%
@@ -475,10 +471,10 @@
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[278I][@{}l@{\AgdaIndent{0}}]%
-\>[14]\AgdaBound{a₁}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[285I]%
+\>[14]\AgdaBound{x₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≤}}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaBound{x₂}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(∀}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
@@ -491,22 +487,22 @@
 \AgdaBound{f₂}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaBound{x₁}\AgdaSpace{}%
 \AgdaBound{f₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≤}}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaBound{x₂}\AgdaSpace{}%
 \AgdaBound{f₂}\<%
 \\
 %
-\>[2]\AgdaFunction{ext-comp}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fa₁}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-comp}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{sa₁}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fa₂}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaDottedPattern{\AgdaSymbol{.}}\AgdaDottedPattern{\AgdaBound{sa₁}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaDottedPattern{\AgdaSymbol{.}}\AgdaDottedPattern{\AgdaBound{a₁}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{f₁}\AgdaSpace{}%
 \AgdaBound{f₂}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{fst≤}\AgdaSpace{}%
@@ -517,29 +513,29 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[9]\AgdaField{scomp≲}\AgdaSpace{}%
-\AgdaBound{fa₁}\AgdaSpace{}%
+\AgdaBound{n₁}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₁}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f₁}\AgdaSpace{}%
-\AgdaBound{sa₁}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaBound{fa₂}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaBound{n₂}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₁}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f₂}\AgdaSpace{}%
-\AgdaBound{sa₁}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaBound{fst≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₁}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f≤}\AgdaSpace{}%
-\AgdaBound{sa₁}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaField{proj₂}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f≤}\AgdaSpace{}%
-\AgdaBound{sa₁}\AgdaSymbol{)}\<%
+\AgdaBound{a₁}\AgdaSymbol{)}\<%
 \end{code}
 %</bindcomp>
 
 %<*monadprops>
 \begin{code}%
 %
-\>[2]\AgdaFunction{ext-left}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-left}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
@@ -558,8 +554,8 @@
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{η}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
@@ -567,7 +563,7 @@
 \AgdaBound{x}\<%
 \\
 %
-\>[2]\AgdaFunction{ext-left}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-left}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
@@ -589,7 +585,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{ext-right}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-right}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
@@ -602,14 +598,14 @@
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaFunction{η}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
 %
-\>[2]\AgdaFunction{ext-right}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-right}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -622,9 +618,9 @@
 \>[0]\<%
 \\
 %
-\>[2]\AgdaFunction{ext-assoc}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[413I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-assoc}%
+\>[419I]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
@@ -651,47 +647,47 @@
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[413I]%
-\>[14]\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{ext}\AgdaSpace{}%
+\>[419I][@{}l@{\AgdaIndent{0}}]%
+\>[14]\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{)}\<%
 \\
 %
-\>[2]\AgdaFunction{ext-assoc}\AgdaSpace{}%
+\>[2]\AgdaFunction{bind-assoc}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{g}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaBound{g}%
+\>[26]\AgdaKeyword{with}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{c}\<%
 \\
 %
 \>[2]\AgdaSymbol{...}%
-\>[27]\AgdaSymbol{|}\AgdaSpace{}%
+\>[26]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{m}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{)}%
+\>[37]\AgdaKeyword{with}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSpace{}%
 \AgdaBound{b}\<%
 \\
 %
 \>[2]\AgdaSymbol{...}%
-\>[40]\AgdaSymbol{|}\AgdaSpace{}%
+\>[37]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{o}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -709,11 +705,6 @@
 %<*monoidal>
 \begin{code}%
 %
-\>[2]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Unit}\<%
-\\
-%
 \>[2]\AgdaFunction{unit}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{F}\AgdaSpace{}%
@@ -723,13 +714,13 @@
 %
 \>[2]\AgdaFunction{unit}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{η}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
 \AgdaInductiveConstructor{tt}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{mult}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -751,7 +742,7 @@
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
 %
-\>[2]\AgdaFunction{mult}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -772,75 +763,75 @@
 %<*mergecomp>
 \begin{code}%
 %
-\>[2]\AgdaFunction{mult-comp}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[521I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-comp}%
+\>[523I]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x₁}\AgdaSpace{}%
+\AgdaBound{x₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{F}\AgdaSpace{}%
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{b₁}\AgdaSpace{}%
-\AgdaBound{b₂}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{y₁}\AgdaSpace{}%
+\AgdaBound{y₂}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{F}\AgdaSpace{}%
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{a₁}\AgdaSpace{}%
+\AgdaBound{x₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≤}}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
+\AgdaBound{x₂}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{b₁}\AgdaSpace{}%
+\AgdaBound{y₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≤}}\AgdaSpace{}%
-\AgdaBound{b₂}\<%
+\AgdaBound{y₂}\<%
 \\
-\>[.][@{}l@{}]\<[521I]%
+\>[523I][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
-\AgdaBound{a₁}\AgdaSpace{}%
-\AgdaBound{b₁}\AgdaSpace{}%
+\AgdaFunction{merge}\AgdaSpace{}%
+\AgdaBound{x₁}\AgdaSpace{}%
+\AgdaBound{y₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≤}}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
-\AgdaBound{b₂}\<%
+\AgdaFunction{merge}\AgdaSpace{}%
+\AgdaBound{x₂}\AgdaSpace{}%
+\AgdaBound{y₂}\<%
 \\
 %
-\>[2]\AgdaFunction{mult-comp}%
-\>[554I]\AgdaSymbol{(}\AgdaBound{fa₁}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-comp}%
+\>[557I]\AgdaSymbol{(}\AgdaBound{n₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{sa₁}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fa₂}\AgdaSpace{}%
+\AgdaBound{a₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaDottedPattern{\AgdaSymbol{.}}\AgdaDottedPattern{\AgdaBound{sa₁}}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fb₁}\AgdaSpace{}%
+\AgdaDottedPattern{\AgdaSymbol{.}}\AgdaDottedPattern{\AgdaBound{a₁}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{m₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{sb₁}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fb₂}\AgdaSpace{}%
+\AgdaBound{b₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{m₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaDottedPattern{\AgdaSymbol{.}}\AgdaDottedPattern{\AgdaBound{sb₁}}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fa≤}\AgdaSpace{}%
+\AgdaDottedPattern{\AgdaSymbol{.}}\AgdaDottedPattern{\AgdaBound{b₁}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n≤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{prefl}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{fb≤}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{m≤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{prefl}\AgdaSymbol{)}\<%
 \\
-\>[554I][@{}l@{\AgdaIndent{0}}]%
+\>[557I][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{mcomp≲}\AgdaSpace{}%
-\AgdaBound{fa₁}\AgdaSpace{}%
-\AgdaBound{fb₁}\AgdaSpace{}%
-\AgdaBound{fa₂}\AgdaSpace{}%
-\AgdaBound{fb₂}\AgdaSpace{}%
-\AgdaBound{fa≤}\AgdaSpace{}%
-\AgdaBound{fb≤}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{n₁}\AgdaSpace{}%
+\AgdaBound{m₁}\AgdaSpace{}%
+\AgdaBound{n₂}\AgdaSpace{}%
+\AgdaBound{m₂}\AgdaSpace{}%
+\AgdaBound{n≤}\AgdaSpace{}%
+\AgdaBound{m≤}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{prefl}\<%
 \end{code}
@@ -849,7 +840,7 @@
 %<*monoidalprops>
 \begin{code}%
 %
-\>[2]\AgdaFunction{mult-left}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-left}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -860,22 +851,22 @@
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaFunction{unit}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{a₁}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{η}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{tt}\AgdaSymbol{))}\<%
 \\
 %
-\>[2]\AgdaFunction{mult-left}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-left}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{transₛ}\AgdaSpace{}%
@@ -890,7 +881,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{mult-right}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-right}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -901,22 +892,22 @@
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaFunction{unit}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{b₁}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{η}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{tt}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b₁}\AgdaSymbol{))}\<%
 \\
 %
-\>[2]\AgdaFunction{mult-right}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-right}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -933,9 +924,9 @@
 \>[0]\<%
 \\
 %
-\>[2]\AgdaFunction{mult-assoc}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[650I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-assoc}%
+\>[652I]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -957,10 +948,10 @@
 \AgdaBound{C}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[650I]%
-\>[15]\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{mult}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{mult}\AgdaSpace{}%
+\>[652I][@{}l@{\AgdaIndent{0}}]%
+\>[15]\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
@@ -970,25 +961,27 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{η}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{)}%
+\>[686I]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{\})}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaSymbol{\})}\<%
+\\
+\>[686I][@{}l@{\AgdaIndent{0}}]%
+\>[62]\AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
+\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\<%
 \\
 %
-\>[2]\AgdaFunction{mult-assoc}%
-\>[697I]\AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-assoc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{m}\AgdaSpace{}%
@@ -999,7 +992,7 @@
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[697I]%
+\>[2][@{}l@{\AgdaIndent{0}}]%
 \>[13]\AgdaFunction{transₛ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{+idr}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{max}\AgdaSpace{}%
@@ -1019,9 +1012,9 @@
 %<*mergecomm>
 \begin{code}%
 %
-\>[2]\AgdaFunction{mult-comm}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[720I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-comm}%
+\>[721I]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -1038,14 +1031,14 @@
 \AgdaBound{S}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[720I]%
+\>[721I][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≈}}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
@@ -1062,7 +1055,7 @@
 \AgdaBound{a}\AgdaSymbol{\})}\<%
 \\
 %
-\>[2]\AgdaFunction{mult-comm}\AgdaSpace{}%
+\>[2]\AgdaFunction{merge-comm}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1088,8 +1081,8 @@
 \begin{code}%
 %
 \>[2]\AgdaFunction{ichg}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[775I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSpace{}%
@@ -1121,17 +1114,17 @@
 \AgdaBound{D}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[775I]%
-\>[9]\AgdaFunction{mult}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{ext}\AgdaSpace{}%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaFunction{merge}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{ext}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{bind}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{F≤}}\AgdaSpace{}%
-\AgdaFunction{ext}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaFunction{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
@@ -1140,7 +1133,7 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{mult}\AgdaSpace{}%
+\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{g}\AgdaSpace{}%
@@ -1156,21 +1149,21 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{g}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{g}%
+\>[28]\AgdaKeyword{with}%
+\>[34]\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{a}%
-\>[40]\AgdaSymbol{|}\AgdaSpace{}%
+\>[43]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSpace{}%
 \AgdaBound{b}\<%
 \\
 %
 \>[2]\AgdaSymbol{...}%
-\>[30]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{o}\AgdaSpace{}%
+\>[28]\AgdaSymbol{|}%
+\>[34]\AgdaSymbol{(}\AgdaBound{o}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{)}%
+\>[43]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1206,91 +1199,91 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{=}%
-\>[870I]\AgdaInductiveConstructor{makeConcurrentMonad}\<%
+\>[868I]\AgdaInductiveConstructor{makeConcurrentMonad}\<%
 \\
-\>[870I][@{}l@{\AgdaIndent{0}}]%
+\>[868I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}F≈\AgdaUnderscore{}}}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
 \>[20]\AgdaSymbol{(}\AgdaFunction{eqF≈}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
 \>[20]\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}F≤\AgdaUnderscore{}}}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
 \>[20]\AgdaSymbol{(}\AgdaFunction{porderF≤}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{η}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{return}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{ext}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{bind}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{ext-comp}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{bind-comp}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{ext-left}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{bind-left}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{ext-right}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{bind-right}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{ext-assoc}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{bind-assoc}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{mult}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{merge}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{mult-comp}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{merge-comp}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{mult-left}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{merge-left}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{mult-right}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{merge-right}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{mult-assoc}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{merge-assoc}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
-\>[20]\AgdaSymbol{(}\AgdaFunction{mult-comm}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[20]\AgdaSymbol{(}\AgdaFunction{merge-comm}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \\
 %
 \>[20]\AgdaSymbol{(}\AgdaFunction{ichg}%
-\>[32]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[34]\AgdaSymbol{\{}\AgdaBound{S}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{cmonoid}\AgdaSymbol{\})}\<%
 \end{code}
 %</proof>
