--- a/doc/latex/Instances/AltConcurrentMonad.tex
+++ b/doc/latex/Instances/AltConcurrentMonad.tex
@@ -28,14 +28,14 @@
 
 %<*altconcurrent>
 \begin{code}%
-\>[0]\AgdaFunction{altDelayConcurrent}\AgdaSpace{}%
+\>[0]\AgdaFunction{writerConatConcurrent}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{ConcurrentMonad}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{F}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Conat}\AgdaSpace{}%
 \AgdaPostulate{∞}\AgdaSymbol{))}\<%
 \\
-\>[0]\AgdaFunction{altDelayConcurrent}\AgdaSpace{}%
+\>[0]\AgdaFunction{writerConatConcurrent}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cmonoid⇒cmonad}\AgdaSpace{}%
 \AgdaFunction{conatConcurrent}\<%
