--- a/doc/tex/casodelay.tex
+++ b/doc/tex/casodelay.tex
@@ -781,20 +781,58 @@ Para poder crear la instancia de \AgdaRecord{ConcurrentMonoid} para \AgdaDatatyp
 Finalmente, se puede construir la instancia de \AgdaRecord{ConcurrentMonoid} para el tipo \AgdaDatatype{Conat $\infty$}, demostrando que los números conaturales forman un monoide concurrente. 
 \ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{instance}
 
-\subsection{Prueba alternativa de que \textit{delay} es una mónada concurrente}
+\subsection{Una mónada concurrente alternativa a \textit{delay}}
 
+Como se mencionó anteriormente, se puede pensar a los conaturales como una versión simplificada del tipo \textit{delay} en donde no hay valores de retorno (o bien el tipo de retorno es un tipo con un único habitante y el valor de retorno es siempre el mismo). Una forma de generar una alternativa similar a la mónada \textit{delay} es, por lo tanto, agregar a los conaturales un valor de retorno mediante la utilización del producto cartesiano. Un par (\AgdaBound{n} \AgdaInductiveConstructor{,} \AgdaBound{a}) es similar a un habitante del tipo \textit{delay} que tiene \AgdaBound{n} constructores \AgdaInductiveConstructor{later} y retorna el valor \AgdaBound{a}. La principal diferencia entre el tipo \AgdaBound{A} \AgdaDatatype{$\bot$} y el tipo \AgdaDatatype{Conat $\infty$ $\times$} \AgdaBound{A} es que, mientras en el primero existe un único término infinito que jamás retorna ningún valor (\AgdaFunction{never}), en el segundo todos los términos tienen un valor de retorno. En consecuencia, existen muchos habitantes de \AgdaDatatype{Conat $\infty$ $\times$} \AgdaBound{A} que nunca terminan: para cada valor \AgdaBound{a} $:$ \AgdaBound{A}, existe (\AgdaFunction{inf} \AgdaInductiveConstructor{,} \AgdaBound{a}). Esta diferencia hace que no sean equivalentes y no puedan utilizarse para los mismos fines, pero de igual manera son bastante similares y en algunos casos puede ser de utilidad. 
+
+El lema \ref{concmonoid->concmonad} postula que si $(A,\sqsubseteq,*,\mathtt{nothing},;,\mathtt{skip})$ con $\mathtt{nothing} = \mathtt{skip}$ es un monoide concurrente, luego el funtor $\mathit{T}_A \ X = A \times X$ constituye una mónada concurrente. El objetivo de esta sección es demostrar este lema y luego concluir que la mónada \textit{writer} para conaturales, \AgdaDatatype{Conat $\infty$ $\times$} \AgdaBound{A}, es una mónada concurrente. 
+
+\begin{AgdaAlign}
+Lo primero que es necesario definir para poder realizar la demostración del lema es el funtor $\mathit{T}_A$. La función \AgdaFunction{F} que toma dos conjuntos y devuelve su producto cartesiano representa dicho funtor.
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{funtor}
+
+Las definiciones de cada uno de los campos de \AgdaRecord{ConcurrentMonad} se realizarán dentro de un módulo anónimo que tiene como parámetros implícitos un conjunto \AgdaBound{S} y una prueba \AgdaBound{cmonoid} de que tal conjunto es un monoide concurrente. El objetivo de la utilización de este módulo es fijar el conjunto \AgdaBound{S} y abrir la prueba de que es un monoide concurrente para poder utilizar sus campos en las definiciones a realizar. Se define el módulo como se muestra a continuación y se abre \AgdaModule{ConcurrentMonoid} \{\AgdaBound{S}\}\AgdaBound{cmonoid} renombrando cada campo para que no se generen conflictos de nombre. De igual manera se abren las pruebas de equivalencia, orden parcial y preorden para poder acceder fácilmente a sus propiedades internas. 
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{module}
+
+Se define primero la relación de igualdad entre habitantes de \AgdaFunction{F} \AgdaBound{S A} para un \AgdaBound{A} arbitrario. Para los habitantes de \AgdaBound{A} se utilizará la igualdad proposicional, cuyas propiedades \AgdaInductiveConstructor{refl}, \AgdaFunction{sym} y \AgdaFunction{trans} fueron renombradas con una letra \texttt{p} delante para hacer referencia a que corresponden a la igualdad proposicional. Para que dos habitantes de  \AgdaFunction{F} \AgdaBound{S A} sean iguales según la relación \AgdaFunction{\_F$\approx$\_}, las primeras componentes de cada par deben ser iguales según la igualdad extraída de \AgdaBound{cmonoid} y las segundas deben iguales según la igualdad proposicional. Utilizando las propiedades de reflexividad, simetría y transitividad tanto de la igualdad del monoide concurrente como de la igualdad proposicional, se demuestra que \AgdaFunction{\_F$\approx$\_} es una relación de equivalencia.
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{eq}
+
+Luego se define la relación de orden entre habitantes de \AgdaFunction{F} \AgdaBound{S A}, también para un conjunto \AgdaBound{A} arbitrario. En este caso para que (\AgdaBound{n} \AgdaInductiveConstructor{,} \AgdaBound{a}) sea menor o igual que (\AgdaBound{m} \AgdaInductiveConstructor{,} \AgdaBound{a$'$}), se debe cumplir que \AgdaBound{n} es menor o igual a \AgdaBound{m} según la relación de orden del monoide concurrente y que, al igual que antes, \AgdaBound{a} \AgdaFunction{$\equiv$} \AgdaBound{a$'$}. Una vez más se utilizan las propiedades de la relación de orden del monoide concurrente y las propiedades de la igualdad proposicional para demostrar que \AgdaFunction{\_F$\leq$\_} es un orden parcial respecto de \AgdaFunction{\_F$\approx$\_}.
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{orden}
+
+Habiendo definido ambas relaciones, se pasa a definir la estructura monádica. La función \AgdaFunction{return} toma un elemento \AgdaBound{x} de \AgdaBound{A} y lo encapsula en un habitante de \AgdaFunction{F} \AgdaBound{S A}. Esto se realiza generando el par que contiene a \AgdaBound{x} y, en la primera componente, el elemento neutro \AgdaField{zero} del monoide concurrente. El operador \AgdaFunction{bind}, por su lado, toma un elemento (\AgdaBound{n} \AgdaInductiveConstructor{,} \AgdaBound{a}) de \AgdaFunction{F} \AgdaBound{S A} y una función \AgdaBound{f} de tipo \AgdaBound{A} $\rightarrow$ \AgdaFunction{F} \AgdaBound{S B}, evalúa la función \AgdaBound{f} en el valor de retorno \AgdaBound{a} y luego, a partir del resultado obtenido (\AgdaBound{m} \AgdaInductiveConstructor{,} \AgdaBound{b}), genera un par de tipo \AgdaFunction{F} \AgdaBound{S B} conformado por la suma de \AgdaBound{n} y \AgdaBound{m} (operación del monoide concurrente) y el valor de retorno \AgdaBound{b} obtenido de calcular \AgdaBound{f a}.
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monad}
+
+Para ver que \AgdaFunction{bind} es compatible con la relación de orden definida se debe probar que, dados \AgdaBound{x$_1$} y  \AgdaBound{x$_2$} de tipo \AgdaFunction{F} \AgdaBound{S A} y dos funciones \AgdaBound{f$_1$ f$_2$} $:$ \AgdaBound{A} $\rightarrow$ \AgdaFunction{F} \AgdaBound{S B} tales que se tienen pruebas de que \hbox{\AgdaBound{x$_1$} \AgdaFunction{F$\leq$} \AgdaBound{x$_2$}} y $\forall$ (\AgdaBound{a} $:$ \AgdaBound{A}) $\rightarrow$ \AgdaBound{f$_1$ a} \AgdaFunction{F$\leq$} \AgdaBound{f$_2$ a}, se cumple que \AgdaFunction{bind} \AgdaBound{x$_1$ f$_1$} \AgdaFunction{F$\leq$} \AgdaFunction{bind} \AgdaBound{x$_2$ f$_2$}. Para demostrarlo se realiza \textit{pattern matching} sobre \AgdaBound{x$_1$}, \AgdaBound{x$_2$} y la prueba de que \AgdaBound{x$_1$} \AgdaFunction{F$\leq$} \AgdaBound{x$_2$}. Al hacer esto se unifican las segundas componentes de \AgdaBound{x$_1$} y \AgdaBound{x$_2$} que son iguales. Luego las funciones \AgdaBound{f$_1$} y \AgdaBound{f$_2$} se aplican sobre el mismo valor \AgdaBound{a$_1$} y se puede utilizar el argumento \AgdaBound{f$\leq$}. La prueba \AgdaBound{f$\leq$} aplicada a \AgdaBound{a$_1$} prueba que \AgdaBound{f$_1$ a$_1$} \AgdaFunction{F$\leq$} \AgdaBound{f$_2$ a$_1$}. Su primera componente prueba entonces que (\AgdaField{proj$_1$} (\AgdaBound{f$_1$ a$_1$})) \AgdaField{$\lesssim$} (\AgdaField{proj$_1$} (\AgdaBound{f$_2$ a$_1$})) y su segunda componente demuestra que (\AgdaField{proj$_2$} (\AgdaBound{f$_1$ a$_1$})) \AgdaFunction{$\equiv$} (\AgdaField{proj$_2$} (\AgdaBound{f$_2$ a$_1$})).
+
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{bindcomp}
+
+En la primera componente de la prueba de \AgdaFunction{bind-comp} se debe dar un término que demuestre que \AgdaBound{n$_1$} \AgdaField{+} (\AgdaField{proj$_1$} (\AgdaBound{f$_1$ a$_1$})) \AgdaField{$\lesssim$} \AgdaBound{n$_2$} \AgdaField{+} (\AgdaField{proj$_1$} (\AgdaBound{f$_2$ a$_1$})). Para esto se utiliza la compatibilidad de la suma con la relación de orden del monoide concurrente: \AgdaField{scomp$\lesssim$}. Como prueba de que \AgdaBound{n$_1$} \AgdaField{$\lesssim$} \AgdaBound{n$_2$} se utiliza \AgdaBound{fst$\leq$}, que es la primera componenete de la prueba \AgdaBound{x$_1$} \AgdaFunction{F$\leq$} \AgdaBound{x$_2$}. Por otro lado, para mostrar que (\AgdaField{proj$_1$} (\AgdaBound{f$_1$ a$_1$})) \AgdaField{$\lesssim$} (\AgdaField{proj$_1$} (\AgdaBound{f$_2$ a$_1$})) se utiliza la primera componente de la prueba \AgdaBound{f$\leq$} aplicada a \AgdaBound{a$_1$}. Luego, en el lado derecho, hay que probar que (\AgdaField{proj$_2$} (\AgdaBound{f$_1$ a$_1$})) \AgdaFunction{$\equiv$} (\AgdaField{proj$_2$} (\AgdaBound{f$_2$ a$_1$})), para lo cual se utiliza la segunda componente de la prueba \AgdaBound{f$\leq$} aplicada también a \AgdaBound{a$_1$}.
+
+Para probar las leyes de las mónadas se utilizan, a la izquierda, las propiedades análogas correspondientes a la suma del monoide concurrente. Las segundas componentes se prueban trivialmente utilizando la reflexividad de la igualdad proposicional. 
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monadprops}
+
+Se introduce a continuación la estructura monoidal. Se define el valor \AgdaFunction{unit} únicamente para poder utilizarlo en los tipos de las propiedades que siguen, puesto que este ya está fijo en la formalizacion de mónada concurrente y no se puede modificar. La operación \AgdaFunction{merge}, por su lado, dados dos valores de tipo \AgdaFunction{F} \AgdaBound{S A} y \AgdaFunction{F} \AgdaBound{S B}, debe devolver un valor de tipo \AgdaFunction{F} \AgdaBound{S} (\AgdaBound{A} \AgdaDatatype{$\times$} \AgdaBound{B}). Este se define como el par formado por el máximo de las primeras componentes y el par ordenado de las segundas componentes.
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monoidal}
+
+A la hora de probar la compatibilidad del operador \AgdaFunction{merge} con la relación de orden, se tienen valores \AgdaBound{x$_1$ x$_2$} $:$ \AgdaFunction{F} \AgdaBound{S A} e \AgdaBound{y$_1$ y$_2$} $:$ \AgdaFunction{F} \AgdaBound{S B} tales que \AgdaBound{x$_1$} \AgdaFunction{F$\leq$} \AgdaBound{x$_2$} e \AgdaBound{y$_1$} \AgdaFunction{F$\leq$} \AgdaBound{y$_2$}. Al hacer \textit{pattern matching} sobre todos los valores y también sobre las pruebas, se unifican los valores de retorno de los dos primeros argumentos y de los dos segundos que son iguales debido a las pruebas de desigualdad. 
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{mergecomp}
+
+El objetivo es demostrar, por un lado, que \AgdaField{max} \AgdaBound{n$_1$ m$_1$} \AgdaField{$\lesssim$} \AgdaField{max} \AgdaBound{n$_2$ m$_2$}. Para esto se utiliza la compatibilidad del operador \AgdaField{max} con la relación de orden del monoide concurrente. En el lado derecho, el objetivo es demostrar que (\AgdaBound{a$_1$} \AgdaInductiveConstructor{,} \AgdaBound{b$_1$}) \AgdaFunction{$\equiv$} (\AgdaBound{a$_1$} \AgdaInductiveConstructor{,} \AgdaBound{b$_1$}) puesto que se unificaron los valores. La prueba es, por lo tanto, trivial. 
+
+Las demostraciones de las propiedades del operador \AgdaFunction{merge} también utilizan las propiedades análogas del operador \AgdaField{max}, pero es necesario también utilizar la identidad a derecha de la suma debido a que estas propiedades están definidas utilizando el operador \AgdaFunction{bind} seguido de un \AgdaFunction{return}. Cuando se tiene una expresión del tipo \AgdaFunction{bind} (\AgdaBound{n} \AgdaInductiveConstructor{,} \AgdaBound{\_}) ($\lambda$ \AgdaBound{\_} $\rightarrow$ \AgdaFunction{return} \AgdaBound{\_}), por definición de \AgdaFunction{return}, es lo mismo que tener \AgdaFunction{bind} (\AgdaBound{n} \AgdaInductiveConstructor{,} \AgdaBound{\_}) ($\lambda$ \AgdaBound{\_} $\rightarrow$ \AgdaField{zero} \AgdaInductiveConstructor{,} \AgdaBound{\_}). Luego si se aplica la definición de \AgdaFunction{bind} se obtiene: (\AgdaBound{n} \AgdaField{+} \AgdaField{zero} \AgdaInductiveConstructor{,} \AgdaBound{\_}). Por lo tanto, para poder realizar pruebas sobre la primer componente de este resultado es necesario utilizar el lema \AgdaField{+idr} de manera que se pueda reducir la suma con \AgdaField{zero}.
+
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monoidalprops}
 \ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{mergecomm}
-\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{ichange}
-\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{proof}
 
+Queda por probar únicamente la ley de intercambio. Sean (\AgdaBound{n} \AgdaInductiveConstructor{,} \AgdaBound{a}) de tipo \AgdaFunction{F} \AgdaBound{S A} y (\AgdaBound{m} \AgdaInductiveConstructor{,} \AgdaBound{b}) de tipo \AgdaFunction{F} \AgdaBound{S B}. Luego sean \AgdaBound{f} $:$ \AgdaBound{A} $\rightarrow$ \AgdaFunction{F} \AgdaBound{S C} y \AgdaBound{g} $:$ \AgdaBound{B} $\rightarrow$ \AgdaFunction{F} \AgdaBound{S D} tales que \AgdaBound{f a} $=$ (\AgdaBound{o} \AgdaInductiveConstructor{,} \AgdaBound{c}) y \hbox{\AgdaBound{g b} $=$ (\AgdaBound{p} \AgdaInductiveConstructor{,} \AgdaBound{d})}. Luego, por las definiciones de los operadores \AgdaFunction{bind} y \AgdaFunction{merge}, el objetivo a demostrar en el lado izquierdo es: \AgdaField{max} (\AgdaBound{n} \AgdaField{+} \AgdaBound{o}) (\AgdaBound{m} \AgdaField{+} \AgdaBound{p}) \AgdaField{$\lesssim$} (\AgdaField{max} \AgdaBound{n m}) \AgdaField{+} (\AgdaField{max} \AgdaBound{o p}). Esto se prueba utilizando la ley de intercambio del monoide concurrente. En el lado derecho, se debe demostrar que (\AgdaBound{c} \AgdaInductiveConstructor{,} \AgdaBound{d}) es igual a sí mismo, lo cual se prueba trivialmente. 
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{ichange}
+
+Finalmente, la prueba de que dado un conjunto \AgdaBound{S} que es un monoide concurrente se puede construir una mónada concurrente para el funtor (\AgdaFunction{F} \AgdaBound{S}) queda como se muestra a continuación. Es preciso notar que a cada una de las definiciones dadas se les pasa como argumentos implícitos el conjunto \AgdaBound{S} y la prueba \AgdaBound{cmonoid} que son los parámetros del módulo anónimo donde se encuentran definidas. De esta manera, se utilizan los campos de \AgdaRecord{ConcurrentMonoid} para construir los de \AgdaRecord{ConcurrentMonad}.
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{proof}
+\end{AgdaAlign}
+
+Luego, se puede definir una instancia de \AgdaRecord{ConcurrentMonad} para \AgdaFunction{F} (\AgdaDatatype{Conat $\infty$}) utilizando la prueba recién definida y la instancia \AgdaFunction{conatConcurrent} definida en la sección anterior que prueba que \AgdaDatatype{Conat $\infty$} es un monoide concurrente.
 \ExecuteMetaData[latex/Instances/AltConcurrentMonad.tex]{altconcurrent}
+
+Por lo tanto, queda demostrado que la mónada \textit{writer} para el tipo \AgdaDatatype{Conat $\infty$} es una mónada concurrente.   
